devops-pro/05 kubernetes/21 estrategias de deploy/02 ramped/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-versao
spec:
  replicas: 10
  selector:
    matchLabels:
      app: api-versao
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: api-versao
    spec:
      containers:
      - name: api-versao
        image: kubedevio/api-versao:v2
        resources: {}
        ports:
        - containerPort: 8080
