devops-pro/05 kubernetes/21 estrategias de deploy/02 ramped/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-deploy-ingress
spec:
  rules:
  - host: green.chiarellidev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-versao-service
            port:
              number: 80
